# py-eddy-tracker-sample-id

./: README.md  setup.cfg
py_eddy_tracker_sample_id/: __init__.py
py_eddy_tracker_sample_id/eddies_med_adt_allsat_dt2018_err70_filt500_order1/: README.md
script/: eddy_id.med.py  eddy_track.py
