[metadata]
author_email = delepoulle.a@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python
description = SAD
long_description = file: README.md
long_description_content_type = text/x-md
name = py_eddy_tracker_sample_id

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
zip_safe = False

[options.package_data]
# Include files:
py_eddy_tracker_sample_id = 
    */*.tar.xz
    */*.nc

[flake8]
exclude = docs,tests
max-line-length = 140
ignore =
    # Assigning lambda expression
    E731
    # Ambiguous variable names
    E741
    # line break before binary operator
    W503
    # line break after binary operator
    W504
    # whitespace before :
    E203

[isort]
combine_as_imports=True
force_grid_wrap=0
force_sort_within_sections=True
force_to_top=typing
include_trailing_comma=True
line_length=140
multi_line_output=3
skip=
    build
